smithy-model/src/test/resources/software/amazon/smithy/model/errorfiles/validators/codegen-metadata/invalid-include.smithy
$version: "2.0"

metadata testCodegen = {
    __type__: "smithy.api#Codegen"
    includeNamespaces: ["not a namespace"]
    includeBySelector: "not a selector"
}

namespace test
